[FIX] Removing Disney photos before I get sued lol

--- a/src/main/resources/templates/assistir.html
+++ b/src/main/resources/templates/assistir.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Disney Plus Fullscreen Video Player</title>
+    <title>OpenStreamfy Fullscreen Video Player</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet">
-    <link rel="icon" href="https://static-assets.bamgrid.com/product/disneyplus/favicons/favicon-aurora.9c40657cf520f9cfcf49dbb4f316aa7c.ico" type="image/png">
+    <link rel="icon" href="/images/favicon.ico" type="image/png">
     <style>
         * {
             margin: 0;
