--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Disney+ Signup</title>
-    <link rel="icon" href="https://static-assets.bamgrid.com/product/disneyplus/favicons/favicon-aurora.9c40657cf520f9cfcf49dbb4f316aa7c.ico" type="image/png">
+    <title>OpenStreamfy Signup</title>
+    <link rel="icon" href="/images/favicon.ico" type="image/png">
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
@@ -120,12 +120,11 @@
   <body>
     <div class="container">
       <div class="signup-form">
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Disney%2B_logo.svg/1200px-Disney%2B_logo.svg.png"
-          alt="Disney+ Logo"
+        <img th:src="@{/images/logo.png}"
+          alt="OpenStreamfy Logo"
           class="logo"
         />
-        <h2>Create Your Disney+ Account</h2>
+        <h2>Create Your OpenStreamfy Account</h2>
         <form id="register-form">
           <div class="form-group">
             <label for="email">Email Address</label>
