--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Disney+ Clone</title>
+  <title>OpenStreamfy</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="icon" href="https://static-assets.bamgrid.com/product/disneyplus/favicons/favicon-aurora.9c40657cf520f9cfcf49dbb4f316aa7c.ico" type="image/png">
+  <link rel="icon" href="/images/favicon.ico" type="image/png">
 
   <meta name="description" content="Assista a vídeos de alta qualidade em nosso site de streaming com uma vasta seleção de filmes, séries e documentários.">
   <meta name="keywords" content="streaming, vídeos online, filmes, séries, documentários, alta qualidade, HLS, vídeos on demand">
@@ -33,9 +33,6 @@
   }
   .navbar {
     background-color: #000;
-  }
-  .navbar-brand img {
-    height: 40px;
   }
   .main-carrousel{
    padding:30px;
