--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listagem de Filmes - Disney Plus</title>
+    <title>Listagem de Filmes - OpenStreamfy</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="/images/favicon.ico" type="image/png">
     <!-- Estilo Personalizado -->
     <style>
         body {
