--- a/src/main/resources/templates/updatePassword.html
+++ b/src/main/resources/templates/updatePassword.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Update Password - Disney+</title>
+  <title>Update Password - OpenStreamfy</title>
+  <link rel="icon" href="/images/favicon.ico" type="image/png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
@@ -39,7 +40,7 @@
         background-color: #0056b3;
     }
 
-    .disney-logo {
+    .openstreamyfy-logo {
         width: 150px;
         margin-bottom: 20px;
     }
@@ -79,7 +80,7 @@
 <div class="container main-container">
   <div class="card col-md-4 col-sm-12">
     <div class="card-header">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Disney%2B_logo.svg" alt="Disney+ Logo" class="disney-logo">
+      <img th:src="@{/images/logo.png}" alt="Openstreamyfy Logo" class="openstreamyfy-logo">
       <h4>Update Your Password</h4>
     </div>
     <div class="card-body">
