[FIX] Adding the same color pattern on each template

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -45,7 +45,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3">
-          <h5>Sobre a OpenStreamfy</h5>
+          <h5>Sobre a OpenStreamify</h5>
           <ul class="footer-links list-unstyled">
             <li><a href="#">Acessibilidade</a></li>
             <li><a href="#">Ajuda</a></li>
@@ -57,7 +57,7 @@
         <div class="col-md-3">
           <h5>Conteúdo</h5>
           <ul class="footer-links list-unstyled">
-            <li><a href="#">Originais OpenStreamfy</a></li>
+            <li><a href="#">Originais OpenStreamify</a></li>
             <li><a href="#">Filmes</a></li>
             <li><a href="#">Séries</a></li>
             <li><a href="#">Documentários</a></li>
@@ -84,7 +84,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2024 OpenStreamfy. Todos os direitos reservados.</p>
+        <p>&copy; 2024 OpenStreamify. Todos os direitos reservados.</p>
       </div>
     </div>
   </footer>
