--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OpenStreamfy</title>
+  <title>Home - OpenStreamify</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="icon" href="/images/favicon.ico" type="image/png">
@@ -14,9 +14,9 @@
 
   <meta property="og:title" content="Site de Streaming - Assista aos Melhores Vídeos">
   <meta property="og:description" content="Aproveite a melhor experiência em streaming com conteúdo de alta qualidade, disponível em diversas plataformas.">
-  <meta property="og:image" content="URL-da-imagem-de-capa">
+  <meta property="og:image" content="http://192.168.100.12:8080/images/background.png">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.seusite.com.br">
+  <meta property="og:url" content="http://192.168.100.12:8080/">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Manrope:wght@200..800&display=swap" rel="stylesheet">
@@ -27,12 +27,9 @@
       font-family: "Manrope", sans-serif;
 }
     body {
-    background-color: #1a1a1a;
+    background-color: #1a1d29;
     color: #fff;
     scroll-behavior:smooth;
-  }
-  .navbar {
-    background-color: #000;
   }
   .main-carrousel{
    padding:30px;
@@ -45,8 +42,7 @@
     box-shadow: rgba(0, 0, 0, 0.69) 0px 26px 30px -10px, rgba(0, 0, 0, 0.73) 0px 16px 10px -10px;
   }
   .main-carrousel img:hover{
-    outline: 4px solid #CCC;
-    border: 2px solid #333;
+    outline: solid #CCC;
     border-radius: 5px;
     }
 
@@ -112,7 +108,7 @@
 
 
 <!-- Carousel -->
-  <div id="carouselExample" class="carousel slide" data-bs-ride="false">
+  <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active main-carrousel">
         <img src="http://ismael221.ddns.net:443/api/v1/media/img/1725314661122-compose.webp" class="d-block w-100" alt="Banner 1">
