--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Listagem de Filmes - OpenStreamfy</title>
+    <title>Filmes - OpenStreamify</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="/images/favicon.ico" type="image/png">
     <!-- Estilo Personalizado -->
     <style>
         body {
-            background-color: #0c0c0c;
+            background-color: #1a1d29;
             color: #fff;
             scroll-behavior:smooth;
         }
@@ -18,6 +18,7 @@
             background-color: #1f1f1f;
             border: none;
             transition: transform 0.5s ease;
+            box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
         }
         .movie-card:hover{
            outline: 3px solid #CCC;
