--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -1,8 +1,8 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark sticky-top" xmlns:th="http://www.w3.org/1999/xhtml">
+<nav class="navbar navbar-expand-lg navbar-dark sticky-top" xmlns:th="http://www.w3.org/1999/xhtml" style="background-color:#2a2d3e;">
     <div class="container">
         <a class="navbar-brand" th:href="@{/}">
-            <img  th:src="@{/images/logo.png}" alt="OpenStreamfy" style="height: 60px;">
+            <img  th:src="@{/images/logo.png}" alt="OpenStreamify" style="height: 80px; margin: -12px;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
