--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -18,7 +18,7 @@
 
       body {
         font-family: "Roboto", sans-serif;
-        background-color: #000;
+        background-color: #1a1d29;
         color: #fff;
         display: flex;
         justify-content: center;
@@ -35,7 +35,7 @@
       }
 
       .signup-form {
-        background-color: #1a1a1a;
+        background-color: #2a2d3e;
         padding: 40px;
         border-radius: 10px;
         box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
@@ -75,8 +75,8 @@
 
       input[type="email"],
       input[type="password"] {
-        background-color: #333;
-        color: #fff;
+        background-color: #3b3e52;
+        color: white;
       }
 
       input:focus {
@@ -121,10 +121,10 @@
     <div class="container">
       <div class="signup-form">
         <img th:src="@{/images/logo.png}"
-          alt="OpenStreamfy Logo"
+          alt="OpenStreamify Logo"
           class="logo"
         />
-        <h2>Create Your OpenStreamfy Account</h2>
+        <h2>Create Your OpenStreamify Account</h2>
         <form id="register-form">
           <div class="form-group">
             <label for="email">Email Address</label>
