--- a/src/main/resources/templates/reset.html
+++ b/src/main/resources/templates/reset.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reset Password - OpenStreamfy</title>
+    <title>Reset Password - OpenStreamify</title>
     <link rel="icon" href="/images/favicon.ico" type="image/png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -74,13 +74,21 @@
             justify-content: center;
             align-items: center;
         }
+    ::placeholder {
+     color: white;
+     opacity: 1; /* Firefox */
+     }
+
+    ::-ms-input-placeholder { /* Edge 12 -18 */
+       color: white;
+    }
     </style>
 </head>
 <body>
 <div class="container main-container">
     <div class="card col-md-4 col-sm-12">
         <div class="card-header">
-            <img th:src="@{/images/logo.png}" alt="OpenStreamfy Logo" class="openstreamyfy-logo">
+            <img th:src="@{/images/logo.png}" alt="OpenStreamify Logo" class="openstreamyfy-logo">
             <h4>Reset your password</h4>
         </div>
         <div class="card-body">
