--- a/src/main/resources/templates/updatePassword.html
+++ b/src/main/resources/templates/updatePassword.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Update Password - OpenStreamfy</title>
+  <title>Update Password - OpenStreamify</title>
   <link rel="icon" href="/images/favicon.ico" type="image/png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
@@ -80,7 +80,7 @@
 <div class="container main-container">
   <div class="card col-md-4 col-sm-12">
     <div class="card-header">
-      <img th:src="@{/images/logo.png}" alt="Openstreamyfy Logo" class="openstreamyfy-logo">
+      <img th:src="@{/images/logo.png}" alt="Openstreamify Logo" class="openstreamyfy-logo">
       <h4>Update Your Password</h4>
     </div>
     <div class="card-body">
