[ADD] Fixed names on the email service and changed ip address to dev purposes

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -111,13 +111,13 @@
   <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active main-carrousel">
-        <img src="http://ismael221.ddns.net:443/api/v1/media/img/1725314661122-compose.webp" class="d-block w-100" alt="Banner 1">
+        <img src="http://192.168.100.12:8080/api/v1/media/img/cover1.webp" class="d-block w-100" alt="Banner 1">
       </div>
       <div class="carousel-item main-carrousel">
-        <img src="https://disney.images.edge.bamgrid.com/ripcut-delivery/v2/variant/disney/2fbd16eb-7bc0-4f97-bbaa-1ec00fe85df1/compose?format=webp&width=1440" class="d-block w-100" alt="Banner 2">
+        <img src="http://192.168.100.12:8080/api/v1/media/img/cover2.jpg" class="d-block w-100" alt="Banner 2">
       </div>
       <div class="carousel-item main-carrousel">
-        <img src="https://www.disneyplus.com/pt-br/browse/entity-99e15d53-926e-4074-b9f4-6524d10c8bed" class="d-block w-100" alt="Banner 3">
+        <img src="http://192.168.100.12:8080/api/v1/media/img/cover3.jpg" class="d-block w-100" alt="Banner 3">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
