[ADD] Added initial setup for live streaming using rtmp

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -19,6 +19,9 @@
                     <a class="nav-link" href="#" style="font-size:20px">Séries</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" th:href="@{/live}" style="font-size:20px">Lives</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#" style="font-size:20px">Minha Lista</a>
                 </li>
                 <!-- Notifications Dropdown -->
