--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -45,36 +45,36 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3">
-          <h5>Sobre a OpenStreamify</h5>
+          <h5 th:text="#{about}">About OpenStreamify</h5>
           <ul class="footer-links list-unstyled">
-            <li><a href="#">Acessibilidade</a></li>
-            <li><a href="#">Ajuda</a></li>
-            <li><a href="#">Dispositivos Compatíveis</a></li>
-            <li><a href="#">Termos de Uso</a></li>
-            <li><a href="#">Política de Privacidade</a></li>
+            <li><a href="#" th:text="#{accessibility}">Accessibility</a></li>
+            <li><a href="#" th:text="#{help}">Help</a></li>
+            <li><a href="#" th:text="#{devices}">Compatible Devices</a></li>
+            <li><a href="#" th:text="#{terms}">Terms of use</a></li>
+            <li><a href="#" th:text="#{privacy}">Privacy Policies</a></li>
           </ul>
         </div>
         <div class="col-md-3">
-          <h5>Conteúdo</h5>
+          <h5 th:text="#{content}">Content</h5>
           <ul class="footer-links list-unstyled">
-            <li><a href="#">Originais OpenStreamify</a></li>
-            <li><a href="#">Filmes</a></li>
-            <li><a href="#">Séries</a></li>
-            <li><a href="#">Documentários</a></li>
-            <li><a href="#">Infantil</a></li>
+            <li><a href="#" th:text="#{originals}">Originals OpenStreamify</a></li>
+            <li><a href="#" th:text="#{movies}">Movies</a></li>
+            <li><a href="#" th:text="#{series}">Series</a></li>
+            <li><a href="#" th:text="#{documentaries}">Documentaries</a></li>
+            <li><a href="#" th:text="#{children}">For children</a></li>
           </ul>
         </div>
         <div class="col-md-3">
-          <h5>Outros</h5>
+          <h5 th:text="#{others}">Other</h5>
           <ul class="footer-links list-unstyled">
-            <li><a href="#">Parcerias</a></li>
-            <li><a href="#">Publicidade</a></li>
-            <li><a href="#">Carreiras</a></li>
-            <li><a href="#">Investidores</a></li>
+            <li><a href="#" th:text="#{partnerships}">Partnerships</a></li>
+            <li><a href="#" th:text="#{advertising}">Advertising</a></li>
+            <li><a href="#" th:text="#{carrers}">Carrers</a></li>
+            <li><a href="#" th:text="#{investers}">Investers</a></li>
           </ul>
         </div>
         <div class="col-md-3">
-          <h5>Siga-nos</h5>
+          <h5 th:text="#{follow}">Follow-us</h5>
           <div class="social-icons">
             <a href="#"><i class="bi bi-facebook"></i></a>
             <a href="#"><i class="bi bi-twitter"></i></a>
@@ -84,7 +84,7 @@
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2024 OpenStreamify. Todos os direitos reservados.</p>
+        <p th:text="#{rights}">&copy; 2024 OpenStreamify. All rights Reserved.</p>
       </div>
     </div>
   </footer>
