--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -132,7 +132,7 @@
 
   <!-- Movie Section -->
   <div class="container mt-5">
-    <h2 class="mb-4">Recomendados para Você</h2>
+    <h2 class="mb-4" th:text="#{recommend}">Recommended For You</h2>
     <div class="row row-cols-2 row-cols-md-4 g-4">
       <div class="col">
         <div class="card">
