--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -72,7 +72,7 @@
 
 <!-- Cabeçalho -->
 <header class="container mt-5">
-    <h1 class="mb-4">Filmes</h1>
+    <h1 class="mb-4" th:text="#{movies}">Movies</h1>
 </header>
 
 <!-- Grade de Filmes -->
